<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Valyuta kurslari</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_language">Select a language</string>
    <string name="language">Language</string>
    <string name="english_lang">English</string>
    <string name="uzbek_lang">Uzbek</string>
    <string name="select_currency">Select Currency</string>
    <string name="convert_currency">Convert Currency</string>
    <string name="today">Today: </string>
    <string name="convert_edit">Convert Edit</string>
    <string name="setting">Setting</string>
    <string name="start">Start</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="internet_message">Please check your internet</string>
    <string name="search_query">Search currency</string>
    <string name="null_meaasge">Please enter the currency amount</string>
     <string name="change_default_currency">Change default currency</string>
    <string name="save_changes">Save changes</string>
    <string name="exit_message">Do you want to exit the program?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="format_message">The entered number format is incorrect</string>
    <string name="last_update">Last update:</string>
    <string name="point_right_message">You cannot enter more than 10 digits after the decimal point</string>
    <string name="number_size_message">The value exceeded 15 digits</string>


</resources>