<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back_press_alerDialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_gravity="center_horizontal"
    android:backgroundTint="#FFFFFF"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">



        <TextView
            android:id="@+id/title_desc_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/exit_message"
            android:textColor="@color/black"
            android:textSize="18sp" />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="end"
            android:layout_margin="24dp"
            android:orientation="horizontal">

            <TextView

                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="24dp"
                android:padding="2dp"
                android:gravity="center"
                android:text="@string/no"
                android:textStyle="bold"
                android:textColor="#E53935"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/yes"
                android:textColor="#43A047"
                android:textStyle="bold"

                android:textSize="18sp"
               />

        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>