<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/secondary_color"
    android:orientation="vertical"
    android:paddingBottom="24dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/change_default_currency"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />


    <androidx.appcompat.widget.SearchView
        android:id="@+id/dialog_search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_title"
        android:layout_marginBottom="5dp"
        android:paddingHorizontal="16dp"
        app:iconifiedByDefault="false"
        app:queryHint="@string/search_query" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dialog_currency_rc_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_cancel_dialog"
        android:layout_below="@id/dialog_search_view"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/row_item_rc_list" />


    <ImageView
        android:id="@+id/not_found_dialog"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/dialog_search_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/not_found"
        android:visibility="gone" />

    <TextView
        android:id="@+id/btn_cancel_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/cancel"
        android:textColor="#1E88E5"
        android:textSize="19sp"

        android:textStyle="bold" />

</RelativeLayout>