<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical"
    tools:context=".ui.setting.LanguageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/backLanguageBtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/icon_background"
            android:paddingVertical="10dp"
            android:paddingEnd="3dp"
            android:src="@drawable/back_icon_black"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/select_language"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="24dp"
        android:background="#F0F0F0"
        app:cardCornerRadius="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/secondary_color"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            tools:ignore="UsingOnClickInXml">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textColor="@color/black"
                android:textSize="20sp"

                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/english_language_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:tag="0">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/gb" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/english_lang"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <RadioButton
                    android:id="@+id/btn_radio_english"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.18"
                    android:buttonTint="@color/black"

                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/uzbek_language_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"

                android:tag="1">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/uz" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/uzbek_lang"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <RadioButton
                    android:id="@+id/btn_radio_uzbek"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.18"
                    android:buttonTint="@color/black"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <Button

                android:id="@+id/btn_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:paddingHorizontal="40dp"
                android:text="@string/save_changes"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="19sp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>