<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical"
    tools:context=".ui.main.MenuFragment">


    <LinearLayout
        android:id="@+id/topMenuLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:text="@string/select_currency"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/setting_icon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/icon_background"
            android:padding="7dp"
            android:src="@drawable/setting_icon_black" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/menuCurrentList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/updateContainer"
        android:layout_below="@+id/topMenuLayout"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="14dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/secondary_color"
            android:orientation="vertical"
            android:paddingVertical="16dp">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                app:iconifiedByDefault="false"
                app:queryHint="@string/search_query" />

            <ImageView
                android:id="@+id/not_found"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/search_view"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/not_found"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/menu_currency_rc_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/search_view"
                android:orientation="vertical"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/row_item_rc_list" />

            <LinearLayout
                android:id="@+id/menuProgressContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/search_view"
                android:background="@color/secondary_color"
                android:gravity="center"
                android:visibility="gone">
                <ProgressBar
                    android:layout_width="60dp"
                    android:layout_height="60dp" />
            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <RelativeLayout
        android:id="@+id/updateContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="24dp"
        android:background="@drawable/ripple_progress_bg"
        android:paddingHorizontal="24dp"
        android:paddingVertical="10dp">

        <ImageView
            android:id="@+id/refreshIcon"
            android:layout_width="20dp"
            android:layout_centerVertical="true"
            android:layout_height="20dp"
            android:rotationX="180"
            android:src="@drawable/refresh" />

        <TextView
            android:id="@+id/updateDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true"
            android:text="@string/last_update"
            android:layout_centerInParent="true"
            android:textColor="@color/text_color_1"
            android:textSize="16sp" />

    </RelativeLayout>


</RelativeLayout>